--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,23 +22,24 @@ services:
       - db
     networks:
       - app_network
+      
+  frontend:
+      build:
+        context: ./front-end
+      container_name: react-frontend
+      ports:
+        - '3000:3000'
+      volumes:
+        - ./front-end:/app
+      depends_on:
+        - web
+      networks:
+        - app_network
 
 networks:
   app_network:
     driver: bridge
 
+
 volumes:
   postgres_data:
-
-# frontend:
-  #   build:
-  #     context: ./frontend
-  #   container_name: react-frontend
-  #   ports:
-  #     - '3000:3000'
-  #   volumes:
-  #     - ./frontend:/app
-  #   depends_on:
-  #     - backend
-  #   networks:
-  #     - internal_network
